grouping / rearranging models & functions

--- a/tensorflow-multiclass-classification.ipynb
+++ b/tensorflow-multiclass-classification.ipynb
@@ -57,8 +57,6 @@
     "df = pd.read_csv(path, header=None)\n",
     "print(\"Read {} rows into dataframe.\".format(len(df)))\n",
     "\n",
-    "\n",
-    "\n",
     "# Sample only 1% of the dataset\n",
     "#df = df.sample(frac=0.01, replace=False)\n",
     "\n",
@@ -197,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "Performing binary Classification\n"
      ]
     }
    ],
@@ -241,7 +239,7 @@
     "elif SCOPE == 'domains': pass\n",
     "elif SCOPE == 'types': pass\n",
     "\n",
-    "print(num_classes)"
+    "print(f'Performing {SCOPE} Classification')"
    ]
   },
   {
@@ -250,9 +248,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CHECK - spot check encoded data\n",
-    "# print(df_trainer.groupby('outcome')['outcome'].count())\n",
-    "# print(df_trainer.head())"
+    "'''Create tests and training sets'''\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.25)"
    ]
   },
   {
@@ -261,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' BUILD MODEL (Neural Network)'''\n",
+    "'''NEURAL NETWORK'''\n",
     "\n",
     "def baseline_model():\n",
     "    '''\n",
@@ -284,17 +283,102 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 94479 samples, validate on 31494 samples\n",
+      "Epoch 1/50\n",
+      "94479/94479 - 4s - loss: 0.0948 - accuracy: 0.9685 - val_loss: 0.0823 - val_accuracy: 0.9709\n",
+      "Epoch 2/50\n",
+      "94479/94479 - 3s - loss: 0.0801 - accuracy: 0.9721 - val_loss: 0.0752 - val_accuracy: 0.9724\n",
+      "Epoch 3/50\n",
+      "94479/94479 - 3s - loss: 0.0767 - accuracy: 0.9727 - val_loss: 0.0773 - val_accuracy: 0.9738\n",
+      "Epoch 4/50\n",
+      "94479/94479 - 3s - loss: 0.0768 - accuracy: 0.9727 - val_loss: 0.0742 - val_accuracy: 0.9726\n",
+      "Epoch 5/50\n",
+      "94479/94479 - 3s - loss: 0.0752 - accuracy: 0.9731 - val_loss: 0.0779 - val_accuracy: 0.9740\n",
+      "Epoch 6/50\n",
+      "94479/94479 - 3s - loss: 0.0768 - accuracy: 0.9732 - val_loss: 0.0770 - val_accuracy: 0.9739\n",
+      "Epoch 7/50\n",
+      "94479/94479 - 4s - loss: 0.0740 - accuracy: 0.9735 - val_loss: 0.0777 - val_accuracy: 0.9719\n",
+      "Epoch 00007: early stopping\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x1d604b1e348>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'''Create tests and training sets'''\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "'''Train NN'''\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.25)"
+    "monitor = EarlyStopping(monitor='val_loss', min_delta=1e-3, patience=5, verbose=1, mode='auto')\n",
+    "estimator.fit(x_train,y_train,validation_data=(x_test,y_test),callbacks=[monitor],verbose=2,epochs=50)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "def validation_score(x, y):\n",
+    "    y_eval = np.argmax(y, axis=1)\n",
+    "    pred = estimator.predict(x)\n",
+    "    score = metrics.accuracy_score(y_eval, pred)\n",
+    "    print(\"Validation score: {}\".format(score))\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation score: 0.9718994094113165\n"
+     ]
+    }
+   ],
+   "source": [
+    "validation_score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation score: 0.9725258587157566\n"
+     ]
+    }
+   ],
+   "source": [
+    "validation_score(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -302,17 +386,17 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    2.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed:   10.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 434 tasks      | elapsed:   26.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 784 tasks      | elapsed:   48.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 1000 out of 1000 | elapsed:  1.0min finished\n",
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    2.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed:   10.6s\n",
+      "[Parallel(n_jobs=-1)]: Done 434 tasks      | elapsed:   24.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 784 tasks      | elapsed:   43.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 1000 out of 1000 | elapsed:   56.8s finished\n",
       "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=8)]: Done  34 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=8)]: Done 184 tasks      | elapsed:    0.4s\n",
-      "[Parallel(n_jobs=8)]: Done 434 tasks      | elapsed:    1.0s\n",
-      "[Parallel(n_jobs=8)]: Done 784 tasks      | elapsed:    1.8s\n",
-      "[Parallel(n_jobs=8)]: Done 1000 out of 1000 | elapsed:    2.3s finished\n"
+      "[Parallel(n_jobs=8)]: Done  34 tasks      | elapsed:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done 184 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=8)]: Done 434 tasks      | elapsed:    0.7s\n",
+      "[Parallel(n_jobs=8)]: Done 784 tasks      | elapsed:    1.2s\n",
+      "[Parallel(n_jobs=8)]: Done 1000 out of 1000 | elapsed:    1.5s finished\n"
      ]
     }
    ],
@@ -331,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,14 +426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16784 0\n"
+      "16802 True\n"
      ]
     },
     {
@@ -393,12 +477,14 @@
     "                                                                                        #leaves PCA1 & PCA2 cols that correspond to true normal rows (for plot)\n",
     "\n",
     "# CHECK - every outcome in our table is normal\n",
-    "print(len(true_normal_df['outcome']), (true_normal_df.outcome == 'normal').sum()) "
+    "outcome_count = len(true_normal_df['outcome'])\n",
+    "normal_count = (true_normal_df.outcome == 'normal').sum()\n",
+    "print(outcome_count, normal_count == 0 or normal_count == outcome_count) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -417,114 +503,6 @@
     "scatter = plt.scatter(principalDf[PC1], principalDf[PC2], c = results, cmap = 'viridis')\n",
     "plt.scatter(true_normal_df[PC1], true_normal_df[PC2], color = 'g', alpha = 1)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 94479 samples, validate on 31494 samples\n",
-      "Epoch 1/50\n",
-      "94479/94479 - 8s - loss: 0.0924 - accuracy: 0.9691 - val_loss: 0.0802 - val_accuracy: 0.9743\n",
-      "Epoch 2/50\n",
-      "94479/94479 - 6s - loss: 0.0791 - accuracy: 0.9720 - val_loss: 0.0839 - val_accuracy: 0.9718\n",
-      "Epoch 3/50\n",
-      "94479/94479 - 6s - loss: 0.0775 - accuracy: 0.9727 - val_loss: 0.0797 - val_accuracy: 0.9749\n",
-      "Epoch 4/50\n",
-      "94479/94479 - 7s - loss: 0.0767 - accuracy: 0.9725 - val_loss: 0.0847 - val_accuracy: 0.9736\n",
-      "Epoch 5/50\n",
-      "94479/94479 - 8s - loss: 0.0763 - accuracy: 0.9727 - val_loss: 0.0770 - val_accuracy: 0.9741\n",
-      "Epoch 6/50\n",
-      "94479/94479 - 8s - loss: 0.0747 - accuracy: 0.9731 - val_loss: 0.0822 - val_accuracy: 0.9724\n",
-      "Epoch 7/50\n",
-      "94479/94479 - 8s - loss: 0.0744 - accuracy: 0.9731 - val_loss: 0.0741 - val_accuracy: 0.9724\n",
-      "Epoch 8/50\n",
-      "94479/94479 - 8s - loss: 0.0742 - accuracy: 0.9733 - val_loss: 0.0761 - val_accuracy: 0.9737\n",
-      "Epoch 9/50\n",
-      "94479/94479 - 6s - loss: 0.0736 - accuracy: 0.9732 - val_loss: 0.0807 - val_accuracy: 0.9707\n",
-      "Epoch 10/50\n",
-      "94479/94479 - 6s - loss: 0.0730 - accuracy: 0.9731 - val_loss: 0.0823 - val_accuracy: 0.9734\n",
-      "Epoch 11/50\n",
-      "94479/94479 - 8s - loss: 0.0735 - accuracy: 0.9732 - val_loss: 0.0787 - val_accuracy: 0.9742\n",
-      "Epoch 12/50\n",
-      "94479/94479 - 6s - loss: 0.0728 - accuracy: 0.9732 - val_loss: 0.0831 - val_accuracy: 0.9726\n",
-      "Epoch 00012: early stopping\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x170860d6188>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "''' Train Model'''\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "\n",
-    "monitor = EarlyStopping(monitor='val_loss', min_delta=1e-3, patience=5, verbose=1, mode='auto')\n",
-    "estimator.fit(x_train,y_train,validation_data=(x_test,y_test),callbacks=[monitor],verbose=2,epochs=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn import metrics\n",
-    "\n",
-    "def validation_score(x, y):\n",
-    "    y_eval = np.argmax(y, axis=1)\n",
-    "    pred = estimator.predict(x)\n",
-    "    score = metrics.accuracy_score(y_eval, pred)\n",
-    "    print(\"Validation score: {}\".format(score))\n",
-    "    return\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation score: 0.9725662030863022\n"
-     ]
-    }
-   ],
-   "source": [
-    "validation_score(x_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation score: 0.9726131790145507\n"
-     ]
-    }
-   ],
-   "source": [
-    "validation_score(x, y)"
    ]
   },
   {
