making more flexible for binary/categories

--- a/tensorflow-multiclass-classification-ATTACKTYPE.ipynb
+++ b/tensorflow-multiclass-classification-ATTACKTYPE.ipynb
@@ -162,18 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dos       3883370\n",
-      "normal     972781\n",
-      "probe       41102\n",
-      "r2l          1126\n",
-      "u2r            52\n",
+      "22\n",
+      "normal    13461\n",
+      "dos        5741\n",
+      "r2l        2199\n",
+      "probe      1106\n",
+      "u2r          37\n",
       "Name: outcome, dtype: int64\n"
      ]
     }
@@ -183,7 +184,9 @@
     "U2R_TYPES = ('buffer_overflow','loadmodule','perl','rootkit')\n",
     "R2L_TYPES = ('ftp_write','guess_passwd','imap','multihop','phf','spy','warezclient','warezmaster')\n",
     "PROBE_TYPES = ('ipsweep','nmap','portsweep','satan')\n",
-    "        \n",
+    "\n",
+    "print(len(DOS_TYPES + U2R_TYPES + R2L_TYPES + PROBE_TYPES))\n",
+    "\n",
     "for i, row in df.iterrows():\n",
     "    val = 'normal'\n",
     "    old_val = row['outcome'].split('.')[0]\n",
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -319,41 +322,41 @@
      "output_type": "stream",
      "text": [
       "outcome\n",
-      "dos       388581\n",
-      "normal     97091\n",
-      "probe       4055\n",
-      "r2l          113\n",
-      "u2r            3\n",
+      "dos        562\n",
+      "normal    1364\n",
+      "probe      113\n",
+      "r2l        209\n",
+      "u2r          6\n",
       "Name: outcome, dtype: int64\n",
-      "         duration  src_bytes  dst_bytes  wrong_fragment    urgent       hot  \\\n",
-      "1411921 -0.066833  -0.001949  -0.001696       -0.015139 -0.001103 -0.026521   \n",
-      "4722504 -0.066833  -0.001949  -0.001696       -0.015139 -0.001103 -0.026521   \n",
-      "179688  -0.066833  -0.001691   0.000238       -0.015139 -0.001103 -0.026521   \n",
-      "14919   -0.066833  -0.001623  -0.001165       -0.015139 -0.001103 -0.026521   \n",
-      "999082  -0.066833  -0.000853  -0.001696       -0.015139 -0.001103 -0.026521   \n",
+      "       duration  src_bytes  dst_bytes  wrong_fragment    urgent       hot  \\\n",
+      "11456 -0.155531  -0.021988  -0.096894       -0.059103 -0.019459 -0.113519   \n",
+      "14183 -0.155531  -0.021986  -0.096894       -0.059103 -0.019459 -0.113519   \n",
+      "5197  -0.155531  -0.019856  -0.096894       -0.059103 -0.019459 -0.113519   \n",
+      "6562  -0.154109  -0.021988  -0.096187       -0.059103 -0.019459 -0.113519   \n",
+      "5181  -0.155531  -0.021766  -0.090013       -0.059103 -0.019459 -0.113519   \n",
       "\n",
-      "         num_failed_logins  num_compromised  root_shell  su_attempted  ...  \\\n",
-      "1411921          -0.004391        -0.002097   -0.008258     -0.004546  ...   \n",
-      "4722504          -0.004391        -0.002097   -0.008258     -0.004546  ...   \n",
-      "179688           -0.004391        -0.002097   -0.008258     -0.004546  ...   \n",
-      "14919            -0.004391        -0.002097   -0.008258     -0.004546  ...   \n",
-      "999082           -0.004391        -0.002097   -0.008258     -0.004546  ...   \n",
+      "       num_failed_logins  num_compromised  root_shell  su_attempted  ...  \\\n",
+      "11456          -0.143996        -0.016493   -0.049452     -0.012637  ...   \n",
+      "14183          -0.143996        -0.016493   -0.049452     -0.012637  ...   \n",
+      "5197           -0.143996        -0.016493   -0.049452     -0.012637  ...   \n",
+      "6562           -0.143996        -0.016493   -0.049452     -0.012637  ...   \n",
+      "5181           -0.143996        -0.016493   -0.049452     -0.012637  ...   \n",
       "\n",
-      "         flag-SF  flag-SH  land-0  land-1  logged_in-0  logged_in-1  \\\n",
-      "1411921        0        0       1       0            1            0   \n",
-      "4722504        0        0       1       0            1            0   \n",
-      "179688         1        0       1       0            0            1   \n",
-      "14919          1        0       1       0            0            1   \n",
-      "999082         1        0       1       0            1            0   \n",
+      "       flag-SF  flag-SH  land-0  land-1  logged_in-0  logged_in-1  \\\n",
+      "11456        0        0       1       0            1            0   \n",
+      "14183        1        0       1       0            1            0   \n",
+      "5197         1        0       1       0            1            0   \n",
+      "6562         0        0       1       0            1            0   \n",
+      "5181         1        0       1       0            1            0   \n",
       "\n",
-      "         is_host_login-0  is_host_login-1  is_guest_login-0  is_guest_login-1  \n",
-      "1411921                1                0                 1                 0  \n",
-      "4722504                1                0                 1                 0  \n",
-      "179688                 1                0                 1                 0  \n",
-      "14919                  1                0                 1                 0  \n",
-      "999082                 1                0                 1                 0  \n",
+      "       is_host_login-0  is_host_login-1  is_guest_login-0  is_guest_login-1  \n",
+      "11456                1                0                 1                 0  \n",
+      "14183                1                0                 1                 0  \n",
+      "5197                 1                0                 1                 0  \n",
+      "6562                 1                0                 1                 0  \n",
+      "5181                 1                0                 1                 0  \n",
       "\n",
-      "[5 rows x 126 columns]\n"
+      "[5 rows x 121 columns]\n"
      ]
     }
    ],
@@ -364,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,16 +419,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 3673823 samples, validate on 1224608 samples\n",
-      "Epoch 1/50\n"
+      "Train on 1690 samples, validate on 564 samples\n",
+      "Epoch 1/50\n",
+      "1690/1690 - 1s - loss: 1.5775 - accuracy: 0.3988 - val_loss: 0.9767 - val_accuracy: 0.6152\n",
+      "Epoch 2/50\n",
+      "1690/1690 - 0s - loss: 0.8091 - accuracy: 0.7225 - val_loss: 0.7157 - val_accuracy: 0.7553\n",
+      "Epoch 3/50\n",
+      "1690/1690 - 0s - loss: 0.6044 - accuracy: 0.7787 - val_loss: 0.5585 - val_accuracy: 0.7606\n",
+      "Epoch 4/50\n",
+      "1690/1690 - 0s - loss: 0.4613 - accuracy: 0.8189 - val_loss: 0.4274 - val_accuracy: 0.8333\n",
+      "Epoch 5/50\n",
+      "1690/1690 - 0s - loss: 0.3498 - accuracy: 0.8840 - val_loss: 0.3402 - val_accuracy: 0.8812\n",
+      "Epoch 6/50\n",
+      "1690/1690 - 0s - loss: 0.2765 - accuracy: 0.9142 - val_loss: 0.2854 - val_accuracy: 0.9043\n",
+      "Epoch 7/50\n",
+      "1690/1690 - 0s - loss: 0.2273 - accuracy: 0.9314 - val_loss: 0.2432 - val_accuracy: 0.9184\n",
+      "Epoch 8/50\n",
+      "1690/1690 - 0s - loss: 0.1907 - accuracy: 0.9391 - val_loss: 0.2048 - val_accuracy: 0.9326\n",
+      "Epoch 9/50\n",
+      "1690/1690 - 0s - loss: 0.1577 - accuracy: 0.9450 - val_loss: 0.1799 - val_accuracy: 0.9486\n",
+      "Epoch 10/50\n",
+      "1690/1690 - 0s - loss: 0.1290 - accuracy: 0.9598 - val_loss: 0.1556 - val_accuracy: 0.9504\n",
+      "Epoch 11/50\n",
+      "1690/1690 - 0s - loss: 0.1104 - accuracy: 0.9704 - val_loss: 0.1417 - val_accuracy: 0.9574\n",
+      "Epoch 12/50\n",
+      "1690/1690 - 0s - loss: 0.0971 - accuracy: 0.9734 - val_loss: 0.1344 - val_accuracy: 0.9592\n",
+      "Epoch 13/50\n",
+      "1690/1690 - 0s - loss: 0.0852 - accuracy: 0.9769 - val_loss: 0.1220 - val_accuracy: 0.9628\n",
+      "Epoch 14/50\n",
+      "1690/1690 - 0s - loss: 0.0768 - accuracy: 0.9763 - val_loss: 0.1146 - val_accuracy: 0.9681\n",
+      "Epoch 15/50\n",
+      "1690/1690 - 0s - loss: 0.0705 - accuracy: 0.9775 - val_loss: 0.1101 - val_accuracy: 0.9645\n",
+      "Epoch 16/50\n",
+      "1690/1690 - 0s - loss: 0.0650 - accuracy: 0.9781 - val_loss: 0.1083 - val_accuracy: 0.9699\n",
+      "Epoch 17/50\n",
+      "1690/1690 - 0s - loss: 0.0600 - accuracy: 0.9817 - val_loss: 0.1008 - val_accuracy: 0.9770\n",
+      "Epoch 18/50\n",
+      "1690/1690 - 0s - loss: 0.0558 - accuracy: 0.9817 - val_loss: 0.0956 - val_accuracy: 0.9663\n",
+      "Epoch 19/50\n",
+      "1690/1690 - 0s - loss: 0.0514 - accuracy: 0.9822 - val_loss: 0.0930 - val_accuracy: 0.9681\n",
+      "Epoch 20/50\n",
+      "1690/1690 - 0s - loss: 0.0489 - accuracy: 0.9834 - val_loss: 0.0921 - val_accuracy: 0.9699\n",
+      "Epoch 21/50\n",
+      "1690/1690 - 0s - loss: 0.0463 - accuracy: 0.9846 - val_loss: 0.0880 - val_accuracy: 0.9681\n",
+      "Epoch 22/50\n",
+      "1690/1690 - 0s - loss: 0.0428 - accuracy: 0.9846 - val_loss: 0.0888 - val_accuracy: 0.9752\n",
+      "Epoch 23/50\n",
+      "1690/1690 - 0s - loss: 0.0416 - accuracy: 0.9870 - val_loss: 0.0864 - val_accuracy: 0.9681\n",
+      "Epoch 24/50\n",
+      "1690/1690 - 0s - loss: 0.0390 - accuracy: 0.9870 - val_loss: 0.0830 - val_accuracy: 0.9681\n",
+      "Epoch 25/50\n",
+      "1690/1690 - 0s - loss: 0.0377 - accuracy: 0.9846 - val_loss: 0.0836 - val_accuracy: 0.9681\n",
+      "Epoch 26/50\n",
+      "1690/1690 - 0s - loss: 0.0366 - accuracy: 0.9846 - val_loss: 0.0851 - val_accuracy: 0.9716\n",
+      "Epoch 27/50\n",
+      "1690/1690 - 0s - loss: 0.0339 - accuracy: 0.9893 - val_loss: 0.0827 - val_accuracy: 0.9699\n",
+      "Epoch 28/50\n",
+      "1690/1690 - 0s - loss: 0.0323 - accuracy: 0.9870 - val_loss: 0.0778 - val_accuracy: 0.9681\n",
+      "Epoch 29/50\n",
+      "1690/1690 - 0s - loss: 0.0325 - accuracy: 0.9893 - val_loss: 0.0804 - val_accuracy: 0.9770\n",
+      "Epoch 30/50\n",
+      "1690/1690 - 0s - loss: 0.0311 - accuracy: 0.9893 - val_loss: 0.0785 - val_accuracy: 0.9787\n",
+      "Epoch 31/50\n",
+      "1690/1690 - 0s - loss: 0.0291 - accuracy: 0.9888 - val_loss: 0.0792 - val_accuracy: 0.9734\n",
+      "Epoch 32/50\n",
+      "1690/1690 - 0s - loss: 0.0294 - accuracy: 0.9882 - val_loss: 0.0809 - val_accuracy: 0.9716\n",
+      "Epoch 33/50\n",
+      "1690/1690 - 0s - loss: 0.0272 - accuracy: 0.9899 - val_loss: 0.0775 - val_accuracy: 0.9716\n",
+      "Epoch 00033: early stopping\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x144ae1d6108>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -437,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,15 +528,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 ... 0 0 0]\n",
-      "Validation score: 0.9992977356056214\n"
+      "[0 1 1 1 1 0 0 1 0 1 3 0 1 1 1 1 1 0 1 0 1 0 1 2 1 2 1 1 1 3 0 1 0 0 1 1 1\n",
+      " 0 0 0 1 0 0 1 1 3 0 3 1 1 2 1 1 1 1 0 1 1 1 1 1 0 3 0 1 1 0 2 2 1 1 0 1 2\n",
+      " 1 1 1 0 1 1 0 1 1 1 1 1 1 3 0 3 0 0 1 1 3 3 0 1 0 1 1 1 1 2 1 0 0 1 0 1 0\n",
+      " 1 1 0 1 1 1 1 1 1 1 1 1 2 1 1 1 2 1 1 1 3 0 1 0 1 1 0 1 1 0 1 1 0 1 0 1 0\n",
+      " 1 0 1 1 0 1 0 1 1 1 1 1 1 1 2 1 1 0 1 1 0 1 0 1 0 1 0 1 0 1 0 3 1 1 1 3 1\n",
+      " 1 1 2 3 1 1 2 1 1 1 1 1 0 1 1 1 0 3 1 1 0 3 0 2 0 1 1 1 1 1 2 3 2 1 1 1 1\n",
+      " 1 0 3 1 1 0 1 1 1 1 3 1 0 3 0 1 1 3 0 1 1 0 1 3 1 3 1 1 1 1 0 0 3 1 1 0 0\n",
+      " 3 1 1 3 0 1 1 1 1 2 1 1 1 1 3 1 1 1 3 0 1 1 1 1 1 1 1 1 0 3 1 3 3 1 4 1 0\n",
+      " 3 1 1 3 1 1 1 3 0 1 1 1 3 1 2 1 1 2 2 1 1 2 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1\n",
+      " 1 3 3 0 1 0 3 0 1 1 3 2 4 0 0 2 0 1 0 1 1 1 0 1 1 1 1 1 0 1 1 1 1 1 1 3 0\n",
+      " 3 1 1 1 1 0 2 1 0 1 1 0 1 1 1 1 1 0 0 1 1 1 2 0 1 1 1 0 1 1 3 1 1 1 3 1 1\n",
+      " 1 1 1 1 0 3 0 0 1 2 2 1 1 1 1 0 1 1 1 0 1 1 1 0 3 3 1 3 2 2 1 1 0 1 1 1 1\n",
+      " 3 3 1 1 1 1 1 2 1 0 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 0 0 0 1 1 1 2 1 0 0 0 0\n",
+      " 1 0 1 1 1 1 0 1 1 1 1 1 0 0 1 0 3 3 1 3 0 3 0 1 1 0 1 1 1 1 1 1 1 3 3 3 2\n",
+      " 1 3 1 1 1 1 1 1 1 1 3 0 1 1 3 1 2 3 1 1 1 1 1 0 0 1 0 0 0 0 1 1 1 0 1 0 1\n",
+      " 1 3 1 0 0 0 1 1 1]\n",
+      "Validation score: 0.9716312056737588\n"
      ]
     }
    ],
@@ -470,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -495,14 +589,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation score for entire dataset: 0.9992760947331911\n"
+      "Validation score for entire dataset: 0.977333215046132\n"
      ]
     }
    ],
