--- a/KMean test.ipynb
+++ b/KMean test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,71 +293,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read 125973 rows.\n",
-      "outcome\n",
-      "anomaly    58630\n",
-      "normal     67343\n",
-      "Name: outcome, dtype: int64\n",
-      "       duration  src_bytes  dst_bytes  wrong_fragment    urgent       hot  \\\n",
-      "76156 -0.110249  -0.007762  -0.004919       -0.089486 -0.007736 -0.095075   \n",
-      "22269 -0.110249  -0.007736  -0.004919       -0.089486 -0.007736 -0.095075   \n",
-      "79895 -0.110249  -0.007720  -0.003556       -0.089486 -0.007736 -0.095075   \n",
-      "28272 -0.110249  -0.007762  -0.004919       -0.089486 -0.007736 -0.095075   \n",
-      "86997 -0.109097  -0.007516  -0.004836       -0.089486 -0.007736 -0.095075   \n",
-      "\n",
-      "       num_failed_logins  num_compromised  root_shell  su_attempted  ...  \\\n",
-      "76156          -0.027023        -0.011664   -0.036652     -0.024436  ...   \n",
-      "22269          -0.027023        -0.011664   -0.036652     -0.024436  ...   \n",
-      "79895          -0.027023        -0.011664   -0.036652     -0.024436  ...   \n",
-      "28272          -0.027023        -0.011664   -0.036652     -0.024436  ...   \n",
-      "86997          -0.027023        -0.011664   -0.036652     -0.024436  ...   \n",
-      "\n",
-      "       flag-SF  flag-SH  land-0  land-1  logged_in-0  logged_in-1  \\\n",
-      "76156        0        0       1       0            1            0   \n",
-      "22269        1        0       1       0            1            0   \n",
-      "79895        1        0       1       0            0            1   \n",
-      "28272        0        0       1       0            1            0   \n",
-      "86997        1        0       1       0            0            1   \n",
-      "\n",
-      "       is_host_login-0  is_host_login-1  is_guest_login-0  is_guest_login-1  \n",
-      "76156                1                0                 1                 0  \n",
-      "22269                1                0                 1                 0  \n",
-      "79895                1                0                 1                 0  \n",
-      "28272                1                0                 1                 0  \n",
-      "86997                1                0                 1                 0  \n",
-      "\n",
-      "[5 rows x 127 columns]\n",
-      "Index(['duration', 'src_bytes', 'dst_bytes', 'wrong_fragment', 'urgent', 'hot',\n",
-      "       'num_failed_logins', 'num_compromised', 'root_shell', 'su_attempted',\n",
-      "       ...\n",
-      "       'flag-SF', 'flag-SH', 'land-0', 'land-1', 'logged_in-0', 'logged_in-1',\n",
-      "       'is_host_login-0', 'is_host_login-1', 'is_guest_login-0',\n",
-      "       'is_guest_login-1'],\n",
-      "      dtype='object', length=127)\n"
+      "Read 22544 rows.\n"
      ]
     }
    ],
    "source": [
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "df = get_local_dataset('./nslkdd/KDDTrain+.txt')\n",
+    "df = get_local_dataset('./nslkdd/KDDTest+.txt')\n",
     "set_KDD_columns(df)\n",
-    "#set_bin_class(df)\n",
+    "set_bin_class(df)\n",
     "control = df\n",
     "reencode_dataset(df)\n",
     "\n",
     "df.dropna(inplace=True, axis=1)\n",
     "\n",
-    "x, y = generate_training_set(df,df['outcome'].nunique(), frac=1.0)\n",
+    "#x, y = generate_training_set(df,df['outcome'].nunique(), frac=1.0)\n",
     "\n",
-    "#model = KMeans().fit(x)\n"
+    "#model = KMeans(n_jobs=-1).fit(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "sns.set(style='ticks')\n",
+    "\n",
+    "path = './figs/'\n",
+    "\n",
+    "print(df.columns)\n",
+    "\n",
+    "def build_scatterplots():\n",
+    "    for i in (df.columns.drop('outcome')):\n",
+    "        fig = sns.pairplot(df, x_vars=df.columns.drop('outcome'), y_vars=i, hue='outcome')\n",
+    "        fig.savefig(path + 'fig-' + i)\n",
+    "        plt.close(fig.fig)\n",
+    "#fig = sns.pairplot(df, vars = ['duration','src_bytes','dst_bytes','wrong_fragment','urgent','hot'], hue='outcome', height=2, aspect=1, dropna=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import multiprocessing\n",
+    "    \n",
+    "def run_process_pool(jobs=1):\n",
+    "    def scatterfig(df, x, y, hue, path):\n",
+    "        fig = sns.pairplot(df, vars = [x,y], hue = hue)\n",
+    "        fig.savefig(path + 'figure- ' + x + 'vs' + y)\n",
+    "        plt.close(fig.fig)\n",
+    "    with multiprocessing.Pool(jobs) as pool:\n",
+    "        for i in df.columns.drop('outcome'):\n",
+    "            for j in df.columns.drop('outcome'):\n",
+    "                pool.apply_async(scatterfig, args = (df,i,j,'outcome',path,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_process_pool(8)"
    ]
   },
   {
@@ -366,10 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "sns.set(style='ticks')\n",
-    "\n",
-    "fig = sns.pairplot(df, vars = [], hue='outcome', height=2, aspect=1, dropna=True)"
+    "build_scatterplots()"
    ]
   },
   {
@@ -396,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
