--- a/tensorflow-multiclass-classification.ipynb
+++ b/tensorflow-multiclass-classification.ipynb
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change me for other classifications!\n",
     "# --------------------------------------------------\n",
-    "SCOPE = 'types'\n",
+    "SCOPE = 'binary'\n",
     "DATASET = 'kdd99'\n",
     "# --------------------------------------------------\n",
     "\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +67,12 @@
     "R2L_TYPES = ('ftp_write','guess_passwd','imap','multihop','phf','spy','warezclient','warezmaster')\n",
     "PROBE_TYPES = ('ipsweep','nmap','portsweep','satan')\n",
     "\n",
+    "ALL_TYPES = ('back','land','neptune','pod','smurf','teardrop','buffer_overflow','loadmodule','perl',\n",
+    "             'rootkit','ftp_write','guess_passwd','imap','multihop','phf','spy','warezclient','warezmaster',\n",
+    "            'ipsweep','nmap','portsweep','satan')\n",
+    "\n",
+    "bin_attack_dict = dict(normal = 'normal')\n",
+    "[bin_attack_dict.setdefault(each, 'suspicious') for each in ALL_TYPES]\n",
     "\n",
     "# For categorical conversion of outcome - dictionaries are fast\n",
     "attack_dict = dict(normal ='normal')\n",
@@ -87,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,10 +207,8 @@
     "# Binary Classification\n",
     "def set_bin_class(df):\n",
     "    for i, row in df.iterrows():\n",
-    "        if row['outcome'].split('.')[0] != 'normal':\n",
-    "            df.at[i, 'outcome'] = 1\n",
-    "        else:\n",
-    "            df.at[i, 'outcome'] = 0\n",
+    "        val = row['outcome'].split('.')[0]\n",
+    "        df.at[i, 'outcome'] = bin_attack_dict[val]\n",
     "\n",
     "# Categorical Attack Classification\n",
     "def set_category_class(df):\n",
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,8 +331,8 @@
     "    'adam' - extension to stochastic gradient descent\n",
     "    '''\n",
     "    model = Sequential()\n",
-    "    model.add(Dense(32, input_dim=x.shape[1], activation='linear'))\n",
-    "    model.add(Dense(32, input_dim=x.shape[1], activation='linear'))\n",
+    "    model.add(Dense(32, input_dim=x.shape[1], activation='relu'))\n",
+    "    model.add(Dense(32, input_dim=x.shape[1], activation='relu'))\n",
     "    model.add(Dense(y.shape[1], activation='softmax'))\n",
     "    \n",
     "    model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
@@ -339,20 +343,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 3673823 samples, validate on 1224608 samples\n",
+      "Epoch 1/50\n",
+      "3673823/3673823 [==============================] - 113s 31us/sample - loss: 0.0025 - accuracy: 0.9995 - val_loss: 0.0010 - val_accuracy: 0.9997\n",
+      "Epoch 2/50\n",
+      "3673823/3673823 [==============================] - 111s 30us/sample - loss: 0.0012 - accuracy: 0.9997 - val_loss: 9.4317e-04 - val_accuracy: 0.9998\n",
+      "Epoch 3/50\n",
+      "3673823/3673823 [==============================] - 112s 31us/sample - loss: 0.0019 - accuracy: 0.9998 - val_loss: 0.0010 - val_accuracy: 0.9998\n",
+      "Epoch 4/50\n",
+      "3673823/3673823 [==============================] - 111s 30us/sample - loss: 9.6949e-04 - accuracy: 0.9998 - val_loss: 0.0012 - val_accuracy: 0.9998\n",
+      "Epoch 5/50\n",
+      "3673823/3673823 [==============================] - 113s 31us/sample - loss: 0.0019 - accuracy: 0.9998 - val_loss: 0.0011 - val_accuracy: 0.9998\n",
+      "Epoch 6/50\n",
+      "3673823/3673823 [==============================] - 116s 32us/sample - loss: 0.0015 - accuracy: 0.9998 - val_loss: 0.0012 - val_accuracy: 0.9998\n",
+      "Epoch 00006: early stopping\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x20c3277df98>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train NN\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
     "monitor = EarlyStopping(monitor='val_loss', min_delta=1e-3, patience=5, verbose=1, mode='auto')\n",
-    "estimator.fit(x_train,y_train,validation_data=(x_test,y_test),callbacks=[monitor],verbose=2,epochs=50)"
+    "estimator.fit(x_train,y_train,validation_data=(x_test,y_test),callbacks=[monitor],verbose=1,epochs=50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,18 +405,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation score: 0.9998244336146751\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9998244336146751"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "validation_score(x_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation score: 0.9998315787238812\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9998315787238812"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "validation_score(x, y)"
    ]
@@ -504,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
