deleted unused files

--- a/tensorflow-multiclass-classification.ipynb
+++ b/tensorflow-multiclass-classification.ipynb
@@ -38,8 +38,8 @@
    "source": [
     "# Change me for other classifications!\n",
     "# --------------------------------------------------\n",
-    "SCOPE = 'categories'\n",
-    "DATASET = 'nslkdd'\n",
+    "SCOPE = 'types'\n",
+    "DATASET = '10%kdd99'\n",
     "# --------------------------------------------------\n",
     "\n",
     "# Our options to test\n",
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read 125973 rows into dataframe.\n"
+      "Read 494021 rows into dataframe.\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performing CATEGORIES Classification\n"
+      "Performing TYPES Classification\n"
      ]
     }
    ],
@@ -336,38 +336,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 94479 samples, validate on 31494 samples\n",
+      "Train on 370515 samples, validate on 123506 samples\n",
       "Epoch 1/50\n",
-      "94479/94479 - 5s - loss: 0.1131 - accuracy: 0.9652 - val_loss: 0.0755 - val_accuracy: 0.9757\n",
+      "370515/370515 - 14s - loss: 0.0385 - accuracy: 0.9951 - val_loss: 0.0105 - val_accuracy: 0.9983\n",
       "Epoch 2/50\n",
-      "94479/94479 - 4s - loss: 0.0651 - accuracy: 0.9786 - val_loss: 0.0650 - val_accuracy: 0.9802\n",
+      "370515/370515 - 14s - loss: 0.0142 - accuracy: 0.9983 - val_loss: 0.0079 - val_accuracy: 0.9988\n",
       "Epoch 3/50\n",
-      "94479/94479 - 4s - loss: 0.0626 - accuracy: 0.9810 - val_loss: 0.0678 - val_accuracy: 0.9809\n",
+      "370515/370515 - 14s - loss: 0.0085 - accuracy: 0.9987 - val_loss: 0.0105 - val_accuracy: 0.9987\n",
       "Epoch 4/50\n",
-      "94479/94479 - 4s - loss: 0.0549 - accuracy: 0.9829 - val_loss: 0.0566 - val_accuracy: 0.9830\n",
+      "370515/370515 - 14s - loss: 0.0115 - accuracy: 0.9988 - val_loss: 0.0056 - val_accuracy: 0.9988\n",
       "Epoch 5/50\n",
-      "94479/94479 - 3s - loss: 0.0524 - accuracy: 0.9838 - val_loss: 0.0644 - val_accuracy: 0.9828\n",
+      "370515/370515 - 15s - loss: 0.0077 - accuracy: 0.9988 - val_loss: 0.0054 - val_accuracy: 0.9990\n",
       "Epoch 6/50\n",
-      "94479/94479 - 3s - loss: 0.0518 - accuracy: 0.9847 - val_loss: 0.0571 - val_accuracy: 0.9857\n",
+      "370515/370515 - 16s - loss: 0.0098 - accuracy: 0.9989 - val_loss: 0.0093 - val_accuracy: 0.9981\n",
       "Epoch 7/50\n",
-      "94479/94479 - 3s - loss: 0.0495 - accuracy: 0.9854 - val_loss: 0.0508 - val_accuracy: 0.9882\n",
+      "370515/370515 - 15s - loss: 0.0065 - accuracy: 0.9989 - val_loss: 0.0056 - val_accuracy: 0.9989\n",
       "Epoch 8/50\n",
-      "94479/94479 - 3s - loss: 0.0477 - accuracy: 0.9859 - val_loss: 0.0523 - val_accuracy: 0.9883\n",
+      "370515/370515 - 15s - loss: 0.0062 - accuracy: 0.9989 - val_loss: 0.0087 - val_accuracy: 0.9984\n",
       "Epoch 9/50\n",
-      "94479/94479 - 3s - loss: 0.0470 - accuracy: 0.9866 - val_loss: 0.0502 - val_accuracy: 0.9876\n",
-      "Epoch 10/50\n",
-      "94479/94479 - 3s - loss: 0.0471 - accuracy: 0.9861 - val_loss: 0.0577 - val_accuracy: 0.9847\n",
-      "Epoch 11/50\n",
-      "94479/94479 - 3s - loss: 0.0468 - accuracy: 0.9867 - val_loss: 0.0522 - val_accuracy: 0.9828\n",
-      "Epoch 12/50\n",
-      "94479/94479 - 3s - loss: 0.0461 - accuracy: 0.9868 - val_loss: 0.0508 - val_accuracy: 0.9881\n",
-      "Epoch 00012: early stopping\n"
+      "370515/370515 - 14s - loss: 0.0057 - accuracy: 0.9989 - val_loss: 0.0112 - val_accuracy: 0.9986\n",
+      "Epoch 00009: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x18ae2f482c8>"
+       "<tensorflow.python.keras.callbacks.History at 0x1c323e18bc8>"
       ]
      },
      "execution_count": 10,
@@ -392,14 +386,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation score: 0.9881247221693021\n",
-      "Validation score: 0.9881165011550094\n"
+      "Validation score: 0.9986073551082538\n",
+      "Validation score: 0.9987105811291422\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9881165011550094"
+       "0.9987105811291422"
       ]
      },
      "execution_count": 11,
@@ -425,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -433,17 +427,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    3.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed:   15.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 434 tasks      | elapsed:   35.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 784 tasks      | elapsed:  1.1min\n",
-      "[Parallel(n_jobs=-1)]: Done 1000 out of 1000 | elapsed:  1.3min finished\n",
-      "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=8)]: Done  34 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=8)]: Done 184 tasks      | elapsed:    0.8s\n",
-      "[Parallel(n_jobs=8)]: Done 434 tasks      | elapsed:    2.0s\n",
-      "[Parallel(n_jobs=8)]: Done 784 tasks      | elapsed:    3.4s\n",
-      "[Parallel(n_jobs=8)]: Done 1000 out of 1000 | elapsed:    4.2s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:   20.3s\n"
      ]
     }
    ],
@@ -457,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
